--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,22 @@ language:
     chapter_name: "Chapter "
 repo: https://github.com/SarBearSchwartz/Quant_I
 output_dir: "docs"
-rmd_files: ["index.Rmd", "00-install.Rmd", "01-prep.Rmd", "02-plots.Rmd", "03-summary.Rmd", "04-normal.Rmd", "05-assumptions.Rmd", "06-t_test.Rmd", "07-indepMeans.Rmd", "08-power.Rmd", "09-corr.Rmd", "10-reg.Rmd", "11-pairedMeans.Rmd", "99-refs.Rmd"]
+rmd_files: ["index.Rmd", 
+            "00-install.Rmd", 
+            "01-prep.Rmd", 
+            "02-plots.Rmd", 
+            "03-summary.Rmd", 
+            "04-normal.Rmd", 
+            "05-assumptions.Rmd", 
+            "06-t_test.Rmd", 
+            "07-indepMeans.Rmd", 
+            "08-power.Rmd", 
+            "09-corr.Rmd", 
+            "10-reg.Rmd", 
+            "11-pairedMeans.Rmd", 
+            "12-1wayANOVA.Rmd",
+            "13-multCompare.Rmd",
+            "14-2wayANOVA.Rmd",
+            "99-refs.Rmd"]
 clean: [packages.bib, bookdown.bbl]
 new_session: yes
